tests/models/enum/unnamed/i128/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        i128
    ),
}
fn main() {}
